@@ -424,6 +424,8 @@ sub on_link_clicked {
 
 __END__
 
+=pod
+
 =head1 NAME
 
 Padre::Wx::Dialog::HelpSearch - Padre Shiny Help Search Dialog
@@ -435,7 +437,7 @@ This opens a dialog where you can search for help topics...
 Note: This used to be Perl 6 Help Dialog (in C<Padre::Plugin::Perl6>) and but it
 has been moved to Padre core.
 
-In order to setup a help system see L<Padre::HelpProvider>.
+In order to setup a help system see L<Padre::Help>.
 
 =head1 AUTHOR
 
